Optimized A*. Implemented navmesh navigation instead of waypoint graph

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -117,6 +117,9 @@
     <!-- Constants -->
     <script src="Code/Constants.js"></script>
 
+    <!-- Random helpers -->
+    <script src="Code/AssociativeContainers.js"></script>
+
     <!-- Language packs-->
     <script src="Code/LanguagePacks/Bulgarian.js"></script>
     <script src="Code/LanguagePacks/English.js"></script>
@@ -124,6 +127,7 @@
     <!-- Algorithms-->
     <script src="Code/Algorithms/GraphDefinitions.js"></script>
     <script src="Code/Algorithms/AStar.js"></script>
+    <script src="Code/Pathfinder.js"></script>
     <!-- /Algorithms-->
     <!-- Scripted -->
     <script src="Code/Scripted/ScriptedActions.js"></script>
