--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -175,6 +175,7 @@
     <script src="Code/Scene/DynamicObject.js"></script>
     <script src="Code/Scene/Terrain.js"></script>
     <script src="Code/Scene/Skybox.js"></script>
+    <script src="Code/Scene/Spawner.js"></script>
     <script src="Code/Scene/Interaction.js"></script>
     <script src="Code/Scene/Environment.js"></script>
     <script src="Code/Scene/Weapon.js"></script>
@@ -186,6 +187,9 @@
     <!-- Content -->
     <script src="Code/Managers/ContentManager.js"></script>
     <!-- /Content -->
+    <!-- Spawner -->
+    <script src="Code/Managers/SpawnerManager.js"></script>
+    <!-- /Spawner -->
     <!-- Overlay2D-->
     <script src="Code/Overlay2D/Storyteller.js"></script>
     <script src="Code/Overlay2D/Alert.js"></script>
